[tool.poetry]
name = "pipetrack"
version = "0.1.0"
description = "Version Control for Creatives"
authors = ["Weedon & Scott <pipetrack@weedonandscott.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
